
CHANGELOG for cope
