@@ -102,4 +102,15 @@ public class QueryTest extends AbstractRuntimeTest
 			assertSame(FALSE, q.getCondition());
 		}
 	}
+	
+	public void testResult()
+	{
+		assertEquals(list(), Query.emptyResult().getData());
+		assertEquals(0, Query.emptyResult().getTotal());
+		assertEquals(0, Query.emptyResult().getOffset());
+		assertEquals(-1, Query.emptyResult().getLimit());
+		assertNotSame(Query.emptyResult(), Query.emptyResult());
+		assertEquals(Query.emptyResult(), Query.emptyResult());
+		assertFalse(Query.emptyResult().hashCode()==Query.emptyResult().hashCode()); // TODO
+	}
 }
